--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.24.0",
     "emailjs-com": "^2.6.4",
+    "jquery": "^3.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-scripts": "^4.0.2",
     "smooth-scroll": "^16.1.3"
   },
